--- a/WebContent/First.html
+++ b/WebContent/First.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="https://image.ibb.co/n5gUtm/icon_1.png"/>
 <meta name="theme-color" content="#daa37f">
-  <title>Coffee House - Homepage</title>
+  <title>Infinity - Homepage</title>
   <style type="text/css">
   @import url('https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700');
 
