--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -95,7 +95,7 @@
 			</tr>
 			<tr>
 				<td>Phone Number</td>
-				<td><input type="number" name="phoneNumber"></td>
+				<td><input type="tel" name="phoneNumber" pattern="[6-9]{1}[0-9]{9}" ></td>
 			</tr>
 			<tr>
 				<td></td>
